v11/docs/ModelsCertificateStoreServerResponse.md
# ModelsCertificateStoreServerResponse

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int32** |  | [optional] 
**UseSSL** | Pointer to **bool** |  | [optional] 
**ServerType** | Pointer to **int32** |  | [optional] 
**Name** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsCertificateStoreServerResponse

`func NewModelsCertificateStoreServerResponse() *ModelsCertificateStoreServerResponse`

NewModelsCertificateStoreServerResponse instantiates a new ModelsCertificateStoreServerResponse object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateStoreServerResponseWithDefaults

`func NewModelsCertificateStoreServerResponseWithDefaults() *ModelsCertificateStoreServerResponse`

NewModelsCertificateStoreServerResponseWithDefaults instantiates a new ModelsCertificateStoreServerResponse object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsCertificateStoreServerResponse) GetId() int32`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsCertificateStoreServerResponse) GetIdOk() (*int32, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsCertificateStoreServerResponse) SetId(v int32)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsCertificateStoreServerResponse) HasId() bool`

HasId returns a boolean if a field has been set.

### GetUseSSL

`func (o *ModelsCertificateStoreServerResponse) GetUseSSL() bool`

GetUseSSL returns the UseSSL field if non-nil, zero value otherwise.

### GetUseSSLOk

`func (o *ModelsCertificateStoreServerResponse) GetUseSSLOk() (*bool, bool)`

GetUseSSLOk returns a tuple with the UseSSL field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUseSSL

`func (o *ModelsCertificateStoreServerResponse) SetUseSSL(v bool)`

SetUseSSL sets UseSSL field to given value.

### HasUseSSL

`func (o *ModelsCertificateStoreServerResponse) HasUseSSL() bool`

HasUseSSL returns a boolean if a field has been set.

### GetServerType

`func (o *ModelsCertificateStoreServerResponse) GetServerType() int32`

GetServerType returns the ServerType field if non-nil, zero value otherwise.

### GetServerTypeOk

`func (o *ModelsCertificateStoreServerResponse) GetServerTypeOk() (*int32, bool)`

GetServerTypeOk returns a tuple with the ServerType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetServerType

`func (o *ModelsCertificateStoreServerResponse) SetServerType(v int32)`

SetServerType sets ServerType field to given value.

### HasServerType

`func (o *ModelsCertificateStoreServerResponse) HasServerType() bool`

HasServerType returns a boolean if a field has been set.

### GetName

`func (o *ModelsCertificateStoreServerResponse) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *ModelsCertificateStoreServerResponse) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *ModelsCertificateStoreServerResponse) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *ModelsCertificateStoreServerResponse) HasName() bool`

HasName returns a boolean if a field has been set.

### SetNameNil

`func (o *ModelsCertificateStoreServerResponse) SetNameNil(b bool)`

 SetNameNil sets the value for Name to be an explicit nil

### UnsetName
`func (o *ModelsCertificateStoreServerResponse) UnsetName()`

UnsetName ensures that no value is present for Name, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


